fixQR
